@@ -92,11 +92,13 @@ E void del_ban(Channel * chan, char *mask);
 E void set_key(Channel * chan, char *value);
 E void set_limit(Channel * chan, char *value);
 E void set_rejoinlock(Channel * chan, char *value);
+E void set_nickchgflood(Channel * chan, char *value);
 E void del_invite(Channel * chan, char *mask);
 E void del_quiet(Channel * chan, char *mask);
 E char *get_key(Channel * chan);
 E char *get_limit(Channel * chan);
 E char *get_rejoinlock(Channel * chan);
+E char *get_nickchgflood(Channel * chan);
 E Channel *chan_create(char *chan, time_t ts);
 E Channel *join_user_update(User * user, Channel * chan, char *name, time_t chants);
 E void add_exception(Channel * chan, char *mask);
