@@ -54,6 +54,7 @@ IRCDVar myIrcd[] = {
      IRCD_DISABLE,              /* flood                     */
      IRCD_DISABLE,              /* flood other               */
      IRCD_DISABLE,              /* join throttle             */
+     IRCD_DISABLE,              /* nick change flood         */
      IRCD_DISABLE,              /* vhost                     */
      IRCD_DISABLE,              /* vhost other               */
      IRCD_DISABLE,              /* channek linking           */
